--- a/CVcompleto.html
+++ b/CVcompleto.html
@@ -708,7 +708,7 @@
                 </div>
 
                 <div class="portfolio-item">
-                    <img src="img/portafolio/TuriStatSp.png" alt="Proyecto A">
+                    <img src="img/portafolio/TuriStatSP.png" alt="Proyecto A">
                     <h3>TuriStatSp</h3>
                     <p>Proyecto grupal que comprende el desarrollo y entrega de un sistema de información turística capaz de recopilar, analizar y presentar datos sobre la afluencia de turistas en las diferentes regiones de España, implementando APIs para la interacción con fuentes de datos externas.</p>
                     <p><strong>Tecnologías utilizadas:</strong> Python, Flask</p>
@@ -722,7 +722,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>© Georgi Angelov</p>
+        <p>© 2024 Georgi Angelov</p>
     </footer>
 </body>
 </html>
