--- a/CVcompleto.html
+++ b/CVcompleto.html
@@ -32,7 +32,11 @@
                 </div>
                 <div class="text-container">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        Una misión, un sentido, un propósito: me defino como alguien constante, determinado y resiliente, al que aún le queda mucha curiosidad, motivación y ganas de aprender.
+                    </p>
+                    <p>
+                        Siempre busco seguir aprendiendo y, en mis ratos libres, me esfuerzo por mantenerme activo, explorando nuevos proyectos e ideas. 
+                        Combinando mis habilidades técnicas con mi deseo de colaborar y aprender en equipo, me apasiona enfrentar nuevos desafíos y contribuir en cada proyecto.
                     </p>
                 </div>
             </div>
