--- a/CVcompleto.html
+++ b/CVcompleto.html
@@ -95,7 +95,7 @@
                 <li>
                     <div class="timeline-content">
                         <h3>Licenciatura en Ingeniería Informática</h3>
-                        <p>Universidad Nacional de Tecnología (2021 - Presente)</p>
+                        <p>Universidad de Castilla - La Mancha (2021 - Presente)</p>
                     </div>
                 </li>
                 <li>
