--- a/CVcompleto.html
+++ b/CVcompleto.html
@@ -15,7 +15,7 @@
         </div>
         <ul class="nav-links" id="nav-links">
             <li><a href="index.html">Inicio</a></li>
-            <!-- <li><a href="CVcompleto.html">Ver CV</a></li> -->
+            <li><a href="portafolio.html">Portafolio</a></li>
             <li><a href="docs/Georgi_Angelov_CV.pdf" target="_blank" class="download-button" download>Descarga mi CV</a></li>
         </ul>
     </nav>
@@ -32,11 +32,7 @@
                 </div>
                 <div class="text-container">
                     <p>
-                        Una misión, un sentido, un propósito: me defino como alguien constante, determinado y resiliente, al que aún le queda mucha curiosidad, motivación y ganas de aprender.
-                    </p>
-                    <p>
-                        Siempre busco seguir aprendiendo y, en mis ratos libres, me esfuerzo por mantenerme activo, explorando nuevos proyectos e ideas. 
-                        Combinando mis habilidades técnicas con mi deseo de colaborar y aprender en equipo, me apasiona enfrentar nuevos desafíos y contribuir en cada proyecto.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </p>
                 </div>
             </div>
@@ -95,7 +91,7 @@
                 <li>
                     <div class="timeline-content">
                         <h3>Licenciatura en Ingeniería Informática</h3>
-                        <p>Universidad de Castilla - La Mancha (2021 - Presente)</p>
+                        <p>Universidad Nacional de Tecnología (2021 - Presente)</p>
                     </div>
                 </li>
                 <li>
@@ -356,7 +352,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/java.png" alt="Java Icon" class="skill-icon">
-                            <span class="skill-name"> Java</span>
+                            <span class="skill-name">Java</span>
                             <span class="percentage">75%</span>
                         </div>
                         <div class="bar-container">
@@ -367,7 +363,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/python.png" alt="Python Icon" class="skill-icon">
-                            <span class="skill-name"> Python</span>
+                            <span class="skill-name">Python</span>
                             <span class="percentage">65%</span>
                         </div>
                         <div class="bar-container">
@@ -377,9 +373,9 @@
 
                     <div class="progress-bar">
                         <div class="header">
-                            <img src="./img/technologies/csharp.png" alt="C# Icon" class="skill-icon">
-                            <span class="skill-name"> C#</span>
-                            <span class="percentage">40%</span>
+                            <img src="./img/technologies/typescript.png" alt="Typescript Icon" class="skill-icon">
+                            <span class="skill-name">Typescript</span>
+                            <span class="percentage">50%</span>
                         </div>
                         <div class="bar-container">
                             <div class="bar" style="width: 50%;"></div>
@@ -388,9 +384,9 @@
 
                     <div class="progress-bar">
                         <div class="header">
-                            <img src="./img/technologies/typescript.png" alt="Typescript Icon" class="skill-icon">
-                            <span class="skill-name"> Typescript</span>
-                            <span class="percentage">50%</span>
+                            <img src="./img/technologies/csharp.png" alt="C# Icon" class="skill-icon">
+                            <span class="skill-name">C#</span>
+                            <span class="percentage">40%</span>
                         </div>
                         <div class="bar-container">
                             <div class="bar" style="width: 40%;"></div>
@@ -404,7 +400,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/spring.png" alt="Spring Icon" class="skill-icon">
-                            <span class="skill-name"> Spring</span>
+                            <span class="skill-name">Spring</span>
                             <span class="percentage">70%</span>
                         </div>
                         <div class="bar-container">
@@ -415,7 +411,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/express.png" alt="Express Icon" class="skill-icon">
-                            <span class="skill-name"> Express</span>
+                            <span class="skill-name">Express</span>
                             <span class="percentage">60%</span>
                         </div>
                         <div class="bar-container">
@@ -426,7 +422,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/hibernate.png" alt="Hibernate Icon" class="skill-icon">
-                            <span class="skill-name"> Hibernate</span>
+                            <span class="skill-name">Hibernate</span>
                             <span class="percentage">50%</span>
                         </div>
                         <div class="bar-container">
@@ -437,7 +433,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/flask.png" alt="Flask Icon" class="skill-icon">
-                            <span class="skill-name"> Flask</span>
+                            <span class="skill-name">Flask</span>
                             <span class="percentage">40%</span>
                         </div>
                         <div class="bar-container">
@@ -452,7 +448,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/mysql.png" alt="MySQL Icon" class="skill-icon">
-                            <span class="skill-name"> MySQL</span>
+                            <span class="skill-name">MySQL</span>
                             <span class="percentage">70%</span>
                         </div>
                         <div class="bar-container">
@@ -463,7 +459,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/mongodb.png" alt="MongoDB Icon" class="skill-icon">
-                            <span class="skill-name"> MongoDB</span>
+                            <span class="skill-name">MongoDB</span>
                             <span class="percentage">60%</span>
                         </div>
                         <div class="bar-container">
@@ -474,7 +470,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/postgresql.png" alt="PostgreSQL Icon" class="skill-icon">
-                            <span class="skill-name"> PostgreSQL</span>
+                            <span class="skill-name">PostgreSQL</span>
                             <span class="percentage">50%</span>
                         </div>
                         <div class="bar-container">
@@ -489,7 +485,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/angular.png" alt="Angular Icon" class="skill-icon">
-                            <span class="skill-name"> Angular</span>
+                            <span class="skill-name">Angular</span>
                             <span class="percentage">70%</span>
                         </div>
                         <div class="bar-container">
@@ -500,7 +496,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/react.png" alt="React Icon" class="skill-icon">
-                            <span class="skill-name"> React</span>
+                            <span class="skill-name">React</span>
                             <span class="percentage">60%</span>
                         </div>
                         <div class="bar-container">
@@ -515,7 +511,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/git.png" alt="Git Icon" class="skill-icon">
-                            <span class="skill-name"> Git</span>
+                            <span class="skill-name">Git</span>
                             <span class="percentage">80%</span>
                         </div>
                         <div class="bar-container">
@@ -526,8 +522,8 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/docker.png" alt="Docker Icon" class="skill-icon">
-                            <span class="skill-name"> Docker</span>
-                            <span class="percentage">40%</span>
+                            <span class="skill-name">Docker</span>
+                            <span class="percentage">50%</span>
                         </div>
                         <div class="bar-container">
                             <div class="bar" style="width: 50%;"></div>
@@ -541,7 +537,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/matlab.png" alt="Matlab Icon" class="skill-icon">
-                            <span class="skill-name"> Matlab</span>
+                            <span class="skill-name">Matlab</span>
                             <span class="percentage">60%</span>
                         </div>
                         <div class="bar-container">
@@ -552,7 +548,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/rlogo.png" alt="R Icon" class="skill-icon">
-                            <span class="skill-name"> R</span>
+                            <span class="skill-name">R</span>
                             <span class="percentage">50%</span>
                         </div>
                         <div class="bar-container">
@@ -567,7 +563,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/linux.png" alt="Linux Icon" class="skill-icon">
-                            <span class="skill-name"> Linux</span>
+                            <span class="skill-name">Linux</span>
                             <span class="percentage">70%</span>
                         </div>
                         <div class="bar-container">
@@ -578,7 +574,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/latex.png" alt="LaTeX Icon" class="skill-icon">
-                            <span class="skill-name"> LaTeX</span>
+                            <span class="skill-name">LaTeX</span>
                             <span class="percentage">60%</span>
                         </div>
                         <div class="bar-container">
@@ -589,7 +585,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/jira.png" alt="Jira Icon" class="skill-icon">
-                            <span class="skill-name"> Jira</span>
+                            <span class="skill-name">Jira</span>
                             <span class="percentage">50%</span>
                         </div>
                         <div class="bar-container">
@@ -604,7 +600,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/spanish.png" alt="Idiomas Icon" class="skill-icon">
-                            <span class="skill-name"> Español</span>
+                            <span class="skill-name">Español</span>
                             <span class="percentage">Nativo</span>
                         </div>
                         <div class="bar-container">
@@ -615,7 +611,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/bulgarian.png" alt="Idiomas Icon" class="skill-icon">
-                            <span class="skill-name"> Búlgaro</span>
+                            <span class="skill-name">Búlgaro</span>
                             <span class="percentage">Nativo</span>
                         </div>
                         <div class="bar-container">
@@ -626,7 +622,7 @@
                     <div id="idIngles" class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/english.png" alt="Idiomas Icon" class="skill-icon">
-                            <span class="skill-name"> Inglés</span>
+                            <span class="skill-name">Inglés</span>
                             <span class="percentage">B1</span>
                             <span class="credential-id" style="display: none;">UCLM (ID: 69fe3327fbca434b840588f3ab5cf95c)</span>
                         </div>
@@ -642,7 +638,7 @@
         </section>
 
 
-        <!-- Portafolio -->
+        <!-- Portafolio 
         <section id="portafolio">
             <h2>Portafolio</h2>
             <div class="portfolio-grid">
@@ -712,7 +708,7 @@
                 </div>
 
                 <div class="portfolio-item">
-                    <img src="img/portafolio/TuriStatSP.png" alt="Proyecto A">
+                    <img src="img/portafolio/TuriStatSp.png" alt="Proyecto A">
                     <h3>TuriStatSp</h3>
                     <p>Proyecto grupal que comprende el desarrollo y entrega de un sistema de información turística capaz de recopilar, analizar y presentar datos sobre la afluencia de turistas en las diferentes regiones de España, implementando APIs para la interacción con fuentes de datos externas.</p>
                     <p><strong>Tecnologías utilizadas:</strong> Python, Flask</p>
@@ -721,6 +717,7 @@
                 
             </div>
             <h2 class="h2-book">[ 10 ]</h2>
+            -->
         </section>
     </main>
 
