--- a/CVcompleto.html
+++ b/CVcompleto.html
@@ -33,6 +33,11 @@
                 <div class="text-container">
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        Una misión, un sentido, un propósito: me defino como alguien constante, determinado y resiliente, al que aún le queda mucha curiosidad, motivación y ganas de aprender.
+                    </p>
+                    <p>
+                        Siempre busco seguir aprendiendo y, en mis ratos libres, me esfuerzo por mantenerme activo, explorando nuevos proyectos e ideas. 
+                        Combinando mis habilidades técnicas con mi deseo de colaborar y aprender en equipo, me apasiona enfrentar nuevos desafíos y contribuir en cada proyecto.
                     </p>
                 </div>
             </div>
@@ -91,7 +96,7 @@
                 <li>
                     <div class="timeline-content">
                         <h3>Licenciatura en Ingeniería Informática</h3>
-                        <p>Universidad Nacional de Tecnología (2021 - Presente)</p>
+                        <p>Universidad de Castilla - La Mancha (2021 - Presente)</p>
                     </div>
                 </li>
                 <li>
@@ -243,9 +248,9 @@
             <h2>Formación complementaria</h2>
             <div class="h3-formacion">
                 <h3 >Talleres</h3>
-                <p><strong>- Atacando Máquinas Virtuales Vulnerables</strong> - Sebástian Reyes UCLM (2024)</p>
-                <p><strong>- Curso de LaTeX para documentos académicos</strong> - Jesús Salido UCLM (2023)</p>
-                <p><strong>- Aprendizaje en la búsqueda y el uso de la información</strong> - Biblioteca UCLM (2022)</p>
+                <p><strong>- Atacando Máquinas Virtuales Vulnerables</strong> - Sebástian Reyes UCLM (2024) - Duración 5 horas.</p>
+                <p><strong>- Curso de LaTeX para documentos académicos</strong> - Jesús Salido UCLM (2023)  - Duración 20 horas. </p>
+                <p><strong>- Aprendizaje en la búsqueda y el uso de la información</strong> - Biblioteca UCLM (2022)  - Duración 25 horas.</p>
             </div>
             <br>
 
@@ -352,7 +357,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/java.png" alt="Java Icon" class="skill-icon">
-                            <span class="skill-name">Java</span>
+                            <span class="skill-name"> Java</span>
                             <span class="percentage">75%</span>
                         </div>
                         <div class="bar-container">
@@ -363,7 +368,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/python.png" alt="Python Icon" class="skill-icon">
-                            <span class="skill-name">Python</span>
+                            <span class="skill-name"> Python</span>
                             <span class="percentage">65%</span>
                         </div>
                         <div class="bar-container">
@@ -373,8 +378,8 @@
 
                     <div class="progress-bar">
                         <div class="header">
-                            <img src="./img/technologies/typescript.png" alt="Typescript Icon" class="skill-icon">
-                            <span class="skill-name">Typescript</span>
+                            <img src="./img/technologies/csharp.png" alt="C# Icon" class="skill-icon">
+                            <span class="skill-name"> C#</span>
                             <span class="percentage">50%</span>
                         </div>
                         <div class="bar-container">
@@ -384,8 +389,8 @@
 
                     <div class="progress-bar">
                         <div class="header">
-                            <img src="./img/technologies/csharp.png" alt="C# Icon" class="skill-icon">
-                            <span class="skill-name">C#</span>
+                            <img src="./img/technologies/typescript.png" alt="Typescript Icon" class="skill-icon">
+                            <span class="skill-name"> Typescript</span>
                             <span class="percentage">40%</span>
                         </div>
                         <div class="bar-container">
@@ -400,7 +405,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/spring.png" alt="Spring Icon" class="skill-icon">
-                            <span class="skill-name">Spring</span>
+                            <span class="skill-name"> Spring</span>
                             <span class="percentage">70%</span>
                         </div>
                         <div class="bar-container">
@@ -411,7 +416,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/express.png" alt="Express Icon" class="skill-icon">
-                            <span class="skill-name">Express</span>
+                            <span class="skill-name"> Express</span>
                             <span class="percentage">60%</span>
                         </div>
                         <div class="bar-container">
@@ -422,7 +427,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/hibernate.png" alt="Hibernate Icon" class="skill-icon">
-                            <span class="skill-name">Hibernate</span>
+                            <span class="skill-name"> Hibernate</span>
                             <span class="percentage">50%</span>
                         </div>
                         <div class="bar-container">
@@ -433,7 +438,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/flask.png" alt="Flask Icon" class="skill-icon">
-                            <span class="skill-name">Flask</span>
+                            <span class="skill-name"> Flask</span>
                             <span class="percentage">40%</span>
                         </div>
                         <div class="bar-container">
@@ -448,7 +453,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/mysql.png" alt="MySQL Icon" class="skill-icon">
-                            <span class="skill-name">MySQL</span>
+                            <span class="skill-name"> MySQL</span>
                             <span class="percentage">70%</span>
                         </div>
                         <div class="bar-container">
@@ -459,7 +464,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/mongodb.png" alt="MongoDB Icon" class="skill-icon">
-                            <span class="skill-name">MongoDB</span>
+                            <span class="skill-name"> MongoDB</span>
                             <span class="percentage">60%</span>
                         </div>
                         <div class="bar-container">
@@ -470,7 +475,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/postgresql.png" alt="PostgreSQL Icon" class="skill-icon">
-                            <span class="skill-name">PostgreSQL</span>
+                            <span class="skill-name"> PostgreSQL</span>
                             <span class="percentage">50%</span>
                         </div>
                         <div class="bar-container">
@@ -485,7 +490,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/angular.png" alt="Angular Icon" class="skill-icon">
-                            <span class="skill-name">Angular</span>
+                            <span class="skill-name"> Angular</span>
                             <span class="percentage">70%</span>
                         </div>
                         <div class="bar-container">
@@ -496,7 +501,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/react.png" alt="React Icon" class="skill-icon">
-                            <span class="skill-name">React</span>
+                            <span class="skill-name"> React</span>
                             <span class="percentage">60%</span>
                         </div>
                         <div class="bar-container">
@@ -511,7 +516,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/git.png" alt="Git Icon" class="skill-icon">
-                            <span class="skill-name">Git</span>
+                            <span class="skill-name"> Git</span>
                             <span class="percentage">80%</span>
                         </div>
                         <div class="bar-container">
@@ -522,7 +527,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/docker.png" alt="Docker Icon" class="skill-icon">
-                            <span class="skill-name">Docker</span>
+                            <span class="skill-name"> Docker</span>
                             <span class="percentage">50%</span>
                         </div>
                         <div class="bar-container">
@@ -537,7 +542,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/matlab.png" alt="Matlab Icon" class="skill-icon">
-                            <span class="skill-name">Matlab</span>
+                            <span class="skill-name"> Matlab</span>
                             <span class="percentage">60%</span>
                         </div>
                         <div class="bar-container">
@@ -548,7 +553,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/rlogo.png" alt="R Icon" class="skill-icon">
-                            <span class="skill-name">R</span>
+                            <span class="skill-name"> R</span>
                             <span class="percentage">50%</span>
                         </div>
                         <div class="bar-container">
@@ -563,7 +568,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/linux.png" alt="Linux Icon" class="skill-icon">
-                            <span class="skill-name">Linux</span>
+                            <span class="skill-name"> Linux</span>
                             <span class="percentage">70%</span>
                         </div>
                         <div class="bar-container">
@@ -574,7 +579,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/latex.png" alt="LaTeX Icon" class="skill-icon">
-                            <span class="skill-name">LaTeX</span>
+                            <span class="skill-name"> LaTeX</span>
                             <span class="percentage">60%</span>
                         </div>
                         <div class="bar-container">
@@ -585,7 +590,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/jira.png" alt="Jira Icon" class="skill-icon">
-                            <span class="skill-name">Jira</span>
+                            <span class="skill-name"> Jira</span>
                             <span class="percentage">50%</span>
                         </div>
                         <div class="bar-container">
@@ -600,7 +605,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/spanish.png" alt="Idiomas Icon" class="skill-icon">
-                            <span class="skill-name">Español</span>
+                            <span class="skill-name"> Español</span>
                             <span class="percentage">Nativo</span>
                         </div>
                         <div class="bar-container">
@@ -611,7 +616,7 @@
                     <div class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/bulgarian.png" alt="Idiomas Icon" class="skill-icon">
-                            <span class="skill-name">Búlgaro</span>
+                            <span class="skill-name"> Búlgaro</span>
                             <span class="percentage">Nativo</span>
                         </div>
                         <div class="bar-container">
@@ -622,7 +627,7 @@
                     <div id="idIngles" class="progress-bar">
                         <div class="header">
                             <img src="./img/technologies/english.png" alt="Idiomas Icon" class="skill-icon">
-                            <span class="skill-name">Inglés</span>
+                            <span class="skill-name"> Inglés</span>
                             <span class="percentage">B1</span>
                             <span class="credential-id" style="display: none;">UCLM (ID: 69fe3327fbca434b840588f3ab5cf95c)</span>
                         </div>
