--- a/CVcompleto.html
+++ b/CVcompleto.html
@@ -294,7 +294,7 @@
                 <h3><strong>Oracle On-Line Presence Security - ORACLE (2023)</strong></h3>
                 <p>Reconocimiento otorgado por Oracle a quienes han realizado contribuciones significativas al programa de Seguridad Online de sus sistemas.</p>
                 <p>Para más información sobre este programa: 
-                    <a href="https://www.oracle.com/security/online-presence-security" target="_blank" class="custom-link">Oracle On-Line Presence Security</a>.
+                    <a href="https://www.oracle.com/security-alerts/cpuoct2023.html" target="_blank" class="custom-link">Oracle On-Line Presence Security</a>.
                 </p>
             </div>
             <h2 class="h2-book" style="font-size: 1.2rem;">[ 7 ]</h2>
