--- a/CVcompleto.html
+++ b/CVcompleto.html
@@ -293,7 +293,7 @@
             <div class="h3-formacion">
                 <h3><strong>Oracle On-Line Presence Security - ORACLE (2023)</strong></h3>
                 <p>Reconocimiento otorgado por Oracle a quienes han realizado contribuciones significativas al programa de Seguridad Online de sus sistemas.</p>
-                <p>Para más información sobre este programa: 
+                <p>Para más información (Sección: On-Line Presence Security Contributors): 
                     <a href="https://www.oracle.com/security-alerts/cpuoct2023.html" target="_blank" class="custom-link">Oracle On-Line Presence Security</a>.
                 </p>
             </div>
