--- a/CVcompleto.html
+++ b/CVcompleto.html
@@ -16,7 +16,7 @@
         <ul class="nav-links" id="nav-links">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="portafolio.html">Portafolio</a></li>
-            <li><a href="docs/Georgi_Angelov_CV.pdf" target="_blank" class="download-button" download>Descarga mi CV</a></li>
+            <li><a href="docs/Georgi_Angelov_CV.pdf" target="_blank" class="download-button">Descarga mi CV</a></li>
         </ul>
     </nav>
     
