--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <ul class="nav-links" id="nav-links">
             <!--  <li><a href="index.html">Inicio</a></li>  -->
             <li><a href="CVcompleto.html">Ver mi CV</a></li>
-            <li><a href="docs/Georgi_Angelov_CV.pdf" target="_blank" class="download-button" download>Descargar mi CV</a></li>
+            <li><a href="docs/Georgi_Angelov_CV.pdf" target="_blank" class="download-button">Descarga mi CV</a></li>
         </ul>
     </nav>
 
