--- a/CVcompleto.html
+++ b/CVcompleto.html
@@ -281,7 +281,8 @@
 
             <div class="h3-formacion">
                 <h3><strong>SolidArtist</strong> - IDATIS (2022 - 2023)</h3>
-                <p>Participé en el desarrollo de un sitio web dedicado al arte urbano, contribuyendo en la implementación del backend con React y Express, así como en la gestión del proyecto en GitHub.</p>
+                <p>Participé en el desarrollo de un sitio web dedicado al arte urbano, contribuyendo en la implementación del backend con React y Express,</p>
+                <p>así como en la gestión del proyecto en GitHub.</p>
             </div>
 
             <h2 class="h2-book" style="font-size: 1.2rem;">[ 6 ]</h2>
@@ -303,7 +304,7 @@
 
         <!-- Aptitudes -->
         <section id="aptitudes">
-            <h2>Aptiitudes</h2>
+            <h2>Aptitudes</h2>
             <ul class="icon-container">
                 <div class="timeline-content">
                     <h3 class="skillsH2">Trabajo en equipo</h3>
