--- a/CVcompleto.html
+++ b/CVcompleto.html
@@ -32,11 +32,8 @@
                 </div>
                 <div class="text-container">
                     <p>
-                        Una misión, un sentido, un propósito: me defino como alguien constante, determinado y resiliente, al que aún le queda mucha curiosidad, motivación y ganas de aprender.
-                    </p>
-                    <p>
-                        Siempre busco seguir aprendiendo y, en mis ratos libres, me esfuerzo por mantenerme activo, explorando nuevos proyectos e ideas. 
-                        Combinando mis habilidades técnicas con mi deseo de colaborar y aprender en equipo, me apasiona enfrentar nuevos desafíos y contribuir en cada proyecto.
+                        Hola, soy Georgi una persona apasionada por la informática con ganas de seguir aprendiendo y explorando nuevos proyectos e ideas combinando mis habilidades 
+                        técnicas con mi deseo de colaborar y contribuir en equipo.
                     </p>
                 </div>
             </div>
